Fixes bug that made tmux freeze after copying buffer to xclip

--- a/tmux.conf
+++ b/tmux.conf
@@ -16,6 +16,6 @@ bind -t vi-copy 'y' copy-selection
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 #linux copy paste integration
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+if-shell 'test "$(uname)" = "Linux"' 'bind C-c run-shell -b "tmux show-buffer | xclip -i -selection clipboard"'
+if-shell 'test "$(uname)" = "Linux"' 'bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"'
 
