--- a/tmux.conf
+++ b/tmux.conf
@@ -15,6 +15,10 @@ bind -t vi-copy 'y' copy-selection
 #reload config files
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+#sets tmux starting window number to 1
+set -g base-index 1
+set -g pane-base-index 1
+
 #linux copy paste integration
 if-shell 'test "$(uname)" = "Linux"' 'bind C-c run-shell -b "tmux show-buffer | xclip -i -selection clipboard"'
 if-shell 'test "$(uname)" = "Linux"' 'bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"'
