Adds new bindings to open panes and windows in the current directory

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,11 @@ bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 bind -t vi-copy 'y' copy-selection
 
+#open new panes in the current directory
+bind c new-window -c '#{pane_current_path}'
+bind "\"" split-window -c '#{pane_current_path}'
+bind "\%" split-window -h -c '#{pane_current_path}'
+
 #reload config files
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
