--- a/tmux.conf
+++ b/tmux.conf
@@ -28,3 +28,6 @@ set -g pane-base-index 1
 if-shell 'test "$(uname)" = "Linux"' 'bind C-c run-shell -b "tmux show-buffer | xclip -i -selection clipboard"'
 if-shell 'test "$(uname)" = "Linux"' 'bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"'
 
+#mac copy paste integration
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+#set-option -g default-command "reattach-to-user-namespace -l zsh"
