--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,9 @@ bind c new-window -c '#{pane_current_path}'
 bind "\"" split-window -c '#{pane_current_path}'
 bind "\%" split-window -h -c '#{pane_current_path}'
 
+#clear console
+bind k send-keys -R \; clear-history
+
 #reload config files
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
