Changes bind key and adds splits aliases commands

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,10 @@
-#unbind C-b
-#set -g prefix ^A
-#bind a send-prefix
+unbind C-b
+set -g prefix ^A
+bind a send-prefix
 
 setw -g mode-keys vi
+
+set -s escape-time 1
 
 #binding copy paste actions to a more vim like scheme
 unbind [
@@ -34,3 +36,8 @@ if-shell 'test "$(uname)" = "Linux"' 'bind C-v run "tmux set-buffer \"$(xclip -o
 #mac copy paste integration
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+#aliases for horizontal and vertical splitting
+bind | split-window -h
+bind - split-window -v
+
