Fixes copy paste on mac and changes keys to split panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,9 +35,11 @@ if-shell 'test "$(uname)" = "Linux"' 'bind C-v run "tmux set-buffer \"$(xclip -o
 
 #mac copy paste integration
 if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+if-shell 'test "$(uname)" = "Darwin"' 'bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"'
+if-shell 'test "$(uname)" = "Darwin"' 'bind C-v run "tmux set-buffer \"$(reattach-to-user-namespace pbpaste)\"; tmux paste-buffer"'
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 
 #aliases for horizontal and vertical splitting
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
